# speed-o-meter

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Profiler/: CmakeLists.txt
Profiler/Includes/: profiler.h
Profiler/src/: profiler.cpp
